SERVER-46333 Disable log truncation in the shell ProgramMultiplexer

Logs coming from mongod/mongos will be truncated already if they should be.